@@ -14,9 +14,9 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>movieOttApplication</name>
     <properties>
-        <java.version>17</java.version>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <java.version>21</java.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
     </properties>
     <description>movieOttApplication</description>
 
@@ -230,6 +230,7 @@
                     <excludes>
                         <exclude>**/*IntegrationTest.java</exclude>
                     </excludes>
+                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -279,7 +280,7 @@
                 </executions>
                 <configuration>
                     <from>
-                        <image>eclipse-temurin:17-jre-jammy</image>
+                        <image>eclipse-temurin:21-jre-jammy</image>
                         <platforms>
                             <platform>
                                 <architecture>amd64</architecture>
